apply plugin: 'java'

repositories {
    mavenCentral()
    maven { url 'https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository'}
    maven { url 'https://jitpack.io'}
}

version = '1.0'

dependencies {
    implementation "org.bouncycastle:bcpkix-jdk18on:$bounVers"
}

tasks.withType(JavaCompile).configureEach {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16

    options.encoding = 'UTF-8'
}

jar {
    archiveFileName = "${base.archivesBaseName}.jar"
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
